Fixed particles overlapping with navbar when window size changes

--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,6 @@ a.brand:hover {
 
 #particles-js {
     position: fixed;
-    left: 15%;
     width: 100%;
     height: 100%;
     background-color: rgba(17, 17, 17, 0.01);
